<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

        <ImageView
            android:id="@+id/signUpPageLogo"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:src="@drawable/logo_black"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



        <TextView
            android:id="@+id/signUpPageWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signUpPageLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/regestrieren"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpPageWelcomeDescription"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toBottomOf="@id/signUpPageWelcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/signUpDescription"
            android:textAlignment="center"
            android:textSize="14sp"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPageUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/signUpPageWelcomeDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:hint="@string/signUpUsernameHint"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:background="@drawable/all_rounded_style"
            android:backgroundTint="@color/login_input_color"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPageEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/signUpPageUsernameEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="10dp"
            android:background="@drawable/all_rounded_style"
            android:backgroundTint="@color/login_input_color"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPagePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/signUpPageEmailEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="10dp"
            android:background="@drawable/all_rounded_style"
            android:backgroundTint="@color/login_input_color"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPageRepeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/signUpPagePasswordEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:hint="@string/signUpRepeatPass"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="10dp"
            android:background="@drawable/all_rounded_style"
            android:backgroundTint="@color/login_input_color"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpPageSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signUpPageRepeatPasswordEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/regestrieren"
            android:paddingVertical="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/primary"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="25dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpAlreadyHaveAcc"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/signUpAlreadyHaveAcc"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anmelden"
                app:layout_constraintLeft_toRightOf="@id/signUpAlreadyHaveAcc"
                android:id="@+id/signUpLoginButton"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:paddingStart="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>