<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.WelcomePageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/welcome_page_bg"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/illustration"
            app:layout_constraintBottom_toTopOf="@id/welcomeInnerContainer"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcomeInnerContainer"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_style"
            android:backgroundTint="@color/white"
            android:paddingTop="15dp"
            android:paddingHorizontal="20dp"
            android:layout_height="350dp">

            <TextView
                android:id="@+id/welcomeTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold"
                android:text="@string/welcome_to"
                android:textColor="@color/text_color"
                android:textSize="42sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcomePageAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/welcomeTo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/app_name"
                android:textSize="42sp"
                />

            <TextView
                android:id="@+id/welcomePageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@id/welcomePageAppName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/welcome_description"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/anmeldenButtonWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:backgroundTint="@color/primary"
                android:text="@string/anmelden"
                app:cornerRadius="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrierenButtonWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp"
                android:backgroundTint="@color/white"
                android:text="@string/regestrieren"
                app:cornerRadius="10dp"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>